Avoid visual shift during rendering
Icons could come late (e.g. if the icon font file has to be loaded).
This ensures that the space is reserved. This follows the usage
recommendation here:
https://icons.getbootstrap.com/#usage
   "We recommend using a width: 1em (and optionally height: 1em)
    for easy resizing via font-size."

--- a/app/templates/app/css/local.css
+++ b/app/templates/app/css/local.css
@@ -34,6 +34,11 @@ Django template comments are used to reduce the payload.
     max-width: 100%;
     aspect-ratio: auto;
 }
+{# Avoids content shift when icon comes late: #}
+.icon {
+    width: 1em;
+    display: inline-block;
+}
 
 .checkbox-container {
     max-height: 150px;
